[project]
name = "museums"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "fuzzywuzzy>=0.18.0",
    "geopy>=2.4.1",
    "lxml>=6.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pycountry>=24.6.1",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
]
